# mlx-pdf-processor

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  mlx.py  processor.py  utils.py
